# regen

./: .gitignore  .ruff.toml  pyproject.toml  regen.py  requirements.txt
regen/: __init__.py  regen.py
regen/templates/: gen.hpp.templ
templates/: init.hpp.templ
tree-sitter-cpp/queries/: trigger_enums.scm
